--- a/discover/css/style.css
+++ b/discover/css/style.css
@@ -1,10 +1,10 @@
 @charset "UTF-8";
 
-/* *{
+*{
     box-sizing: border-box;
     margin: 0;
     padding: 0;
-} */
+}
 
 body{
     background: url(/discover/assets/bg-mobile.jpg) no-repeat top center/cover;
@@ -14,12 +14,11 @@ body{
 
 #container{
     width: 360px;
-    height: 712px;
     margin: auto;
     border: 1px solid red;
 }
-.profile{
-}
+/* .profile{
+} */
 
 .profile p{
     text-align: center;
