--- a/discover/css/style.css
+++ b/discover/css/style.css
@@ -9,19 +9,21 @@
 :root{
     --text-color: white;
     --bg-url: url(/discover/assets/bg-mobile.jpg);
-    --strong-color: rgba(255, 255, 255, 0.5);
+    --stroke-color: rgba(255, 255, 255, 0.5);
     --surface-color: #5e5e5e1e;
     --surface-color-hover: rgba(0, 0, 0, 0.2);
     --highlight-color: rgba(255, 255, 255, 0.2);
+    --switch-bg-url: url(/discover/assets/moon-stars.svg);
 }
 
 .light{
     --text-color: black;
     --bg-url: url(/discover/assets/bg-mobile-light.jpg);
-    --strong-color: rgb(0, 0, 0.5);
+    --stroke-color: rgb(0, 0, 0.5);
     --surface-color: rgba(0, 0, 0, 0.05);
     --surface-color-hover: rgba(51, 50, 50, 0.2);
     --highlight-color: rgba(0, 0, 0, 0.1);
+    --switch-bg-url: url(/discover/assets/sun.svg);
 }
 
 body{
@@ -32,7 +34,7 @@ body{
 
 #container{
     width: 360px;
-    margin: 56px auto 0px;
+    margin: 15px auto 0px;
     padding: 0px 24px;
 }
 
@@ -50,6 +52,40 @@ body{
     display: flex;
     width: 112px;
     margin: auto;
+}
+
+#switch{
+    position: relative;
+    width: 64px;
+    margin: 4px auto;
+}
+
+#switch button{
+    background: white var(--switch-bg-url) no-repeat center;
+    border-radius: 50%;
+    border: none;
+    width: 32px;
+    height: 32px;
+    position: absolute;
+    top: 50%;
+    left: 0;
+    z-index: 1;
+    transform: translateY(-50%);
+}
+
+.light #switch button{
+    right: 0;
+    left: initial;
+}
+
+#switch span{
+    display: block;
+    border-radius: 999px;
+    background: var(--surface-color);
+    backdrop-filter: blur(10px);
+    border: 1px solid var(--stroke-color);
+    width: 64px;
+    height: 24px;
 }
 
 ul{
@@ -73,7 +109,7 @@ li a{
     text-decoration: none;
     margin: 8px auto;
     width: 100%;
-    border: 1px solid var(--strong-color);
+    border: 1px solid var(--stroke-color);
     transition: 0.3s;
 }
 
@@ -87,7 +123,7 @@ li a:hover{
 #socialmedia{
     display: flex;
     justify-content: center;
-    padding: 24px 0px;
+    padding: 20px 0px;
     font-size: 24px;
 }
 
