--- a/discover/css/style.css
+++ b/discover/css/style.css
@@ -33,7 +33,8 @@ body{
 }
 
 #container{
-    width: 360px;
+    width: 100%;
+    max-width: 588px;
     margin: 15px auto 0px;
     padding: 0px 24px;
 }
