--- a/discover/css/style.css
+++ b/discover/css/style.css
@@ -1,5 +1,14 @@
 @charset "UTF-8";
 
+@media (min-width: 700px){
+    :root{
+        --bg-url: url(/discover/assets/bg-desktop.jpg);
+    }
+    .light{
+        --bg-url: url(/discover/assets/bg-desktop-light.jpg);
+    }
+}
+
 *{
     box-sizing: border-box;
     margin: 0;
@@ -30,6 +39,7 @@ body{
     background: var(--bg-url) no-repeat top center/cover;
     font-family: 'Inter', sans-serif;
     color: var(--text-color);
+    height: 100vh;
 }
 
 #container{
