--- a/discover/css/style.css
+++ b/discover/css/style.css
@@ -9,6 +9,27 @@
     }
 }
 
+/* ------------------------------------------ */
+@keyframes slide-in{
+    from{
+        left: 0;
+    }
+
+    to{
+        left: 50%;
+    }
+}
+@keyframes slide-out{
+    from{
+        left: 50%;
+    }
+
+    to{
+        left: 0;
+    }
+}
+/* ------------------------------------------- */
+
 *{
     box-sizing: border-box;
     margin: 0;
@@ -82,11 +103,18 @@ body{
     left: 0;
     z-index: 1;
     transform: translateY(-50%);
+    
+    animation: slide-out 0.3s;
+    transition: 0.3s;
 }
 
 .light #switch button{
-    right: 0;
-    left: initial;
+    animation: slide-in 0.3s forwards;
+}
+
+#switch button:hover{
+    outline: 8px solid var(--highlight-color);
+    transition: 0.3s;
 }
 
 #switch span{
