--- a/discover/css/style.css
+++ b/discover/css/style.css
@@ -38,7 +38,7 @@
 
 :root{
     --text-color: white;
-    --bg-url: url(/discover/assets/bg-mobile.jpg);
+    --bg-url: url(../assets/bg-mobile.jpg);
     --stroke-color: rgba(255, 255, 255, 0.5);
     --surface-color: #5e5e5e1e;
     --surface-color-hover: rgba(0, 0, 0, 0.2);
@@ -48,7 +48,7 @@
 
 .light{
     --text-color: black;
-    --bg-url: url(/discover/assets/bg-mobile-light.jpg);
+    --bg-url: url(../assets/bg-mobile-light.jpg);
     --stroke-color: rgb(0, 0, 0.5);
     --surface-color: rgba(0, 0, 0, 0.05);
     --surface-color-hover: rgba(51, 50, 50, 0.2);
