--- a/discover/css/style.css
+++ b/discover/css/style.css
@@ -2,10 +2,10 @@
 
 @media (min-width: 700px){
     :root{
-        --bg-url: url(/discover/assets/bg-desktop.jpg);
+        --bg-url: url(../assets/bg-desktop.jpg);
     }
     .light{
-        --bg-url: url(/discover/assets/bg-desktop-light.jpg);
+        --bg-url: url(../assets/bg-desktop-light.jpg);
     }
 }
 
