--- a/discover/css/style.css
+++ b/discover/css/style.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 
-@media (min-width: 700px){
+@media (min-width: 800px){
     :root{
         --bg-url: url(../assets/bg-desktop.jpg);
     }
@@ -58,10 +58,13 @@
 
 body{
     background: var(--bg-url) no-repeat top center/cover;
-    background-attachment: fixed;
-    font-family: 'Inter', sans-serif;
-    color: var(--text-color);
+    /* background-attachment: fixed; */
     height: 100vh;
+}
+
+body *{
+    color: var(--text-color);
+    font-family: 'Inter', sans-serif;
 }
 
 #container{
