--- a/discover/css/style.css
+++ b/discover/css/style.css
@@ -40,7 +40,6 @@
 
 /* ----------------------------------------- */
 
-
 :root{
     --text-color: white;
     --bg-url: url(../assets/bg-mobile.jpg);
@@ -174,6 +173,7 @@ li a{
 
 li a:hover{
     background-color: var(--surface-color-hover);
+    /* box-shadow: 0px 0px 10px #ffffff63; */
     color: #5e5e5e;
     border: 1px solid #5e5e5e;
     transition: 0.3s;
@@ -216,5 +216,6 @@ footer a{
 }
 
 footer a:hover{
-    color: #5e5e5e;
+    text-decoration: underline;
+    color: #6800ad;
 }
