--- a/css-grid/style.css
+++ b/css-grid/style.css
@@ -11,24 +11,29 @@ body{
 }
 
 header{
+    display: flex;
+    flex-wrap: wrap;
     background: green;
+    justify-content: center;
+    align-content: center;
     height: 100px;
     margin-bottom: 10px;
 }
 
 h1{
-    text-align: center;
+    color: yellow;
 }
 
 /* --------------------------------------------- */
 .container{
-    margin: auto;
-    width: 940px;
+    max-width: 940px;
     display: grid;
     grid-template-columns: 2fr 3fr;
     grid-template-rows: 100vh;
     grid-template-areas: "sider sider" "it1 it1" "it2 it2";
     gap: 0px 20px;
+    margin: auto;
+    padding: 20px;
 }
 /* --------------------------------------------- */
 
@@ -36,11 +41,13 @@ h1{
     background: red;
     grid-area: sider sider;
     padding: 10px;
+    max-width: 100%;
+    min-width: 200px;
 }
 
 .item-home{
     display: grid;
-    grid-template-rows: 1fr 1fr;
+    grid-template-rows: 1fr 3fr;
     gap: 20px;
 }
 
@@ -58,6 +65,10 @@ h1{
 /* --------------------------------------------- */
 
 footer{
+    display: flex;
+    flex-wrap: wrap;
+    align-content: center;
+    justify-content: center;
     color: white;
     background: black;
     width: 100%;
