--- a/desafios/social-tree/css/style.css
+++ b/desafios/social-tree/css/style.css
@@ -31,6 +31,7 @@ section{
 .foto-nome{
     display: flex;
     flex-wrap: wrap;
+    margin-top: 40px;
 }
 
 .foto-nome-item{
@@ -44,6 +45,7 @@ section{
     width: 150px;
 }
 .foto-nome-item h2{
+    margin: 10px 0px;
     font-size: 1.2em;
     display: flex;
     flex-wrap: wrap;
@@ -62,9 +64,11 @@ section{
     list-style: none;
     flex-direction: column;
     margin: auto;
+    width: 400px;
 }
 
 .link-list ul > li{
+    justify-content: center;
     border: 2px solid black;
     border-radius: 5px;
     display: flex;
@@ -72,13 +76,13 @@ section{
     margin: 5px 0px;
 }
 .link-list a{
+    width: 100%;
+    padding: 10px;
     color: blueviolet;
     display: flex;
     flex-wrap: wrap;
     text-decoration: none;
     justify-content: center;
-    width: 400px;
-    margin: 10px;
 }
 
 /* ------------------------------------------- */
@@ -104,11 +108,14 @@ section{
 }
 
 .social-links a{
+    text-decoration: none;
     display: flex;
     flex-wrap: wrap;
 }
 
-.social-links img{
+.social-links a > i{
     color: #000000;
-    width: 24px;
+    font-size: 24px;
+    display: flex;
+    flex-wrap: wrap;
 }
