--- a/desafios/social-tree/css/style.css
+++ b/desafios/social-tree/css/style.css
@@ -170,6 +170,6 @@ hr{
     border: 1px dashed var(--cor-4);
     border-radius: 5px;
     /* padding: 10px; */
-    max-width: 400px;
+    width: 100%;
     margin: auto;
 }
