--- a/desafios/portfolio/css/style.css
+++ b/desafios/portfolio/css/style.css
@@ -361,6 +361,7 @@ div .item-loc > a p{
     width: 100%;
     margin-bottom: 20px;
     /* height: 20vh; */
+    text-decoration: none;
 }
 
 .post-rec img{
