--- a/desafios/portfolio/css/style.css
+++ b/desafios/portfolio/css/style.css
@@ -27,8 +27,9 @@ body{
     grid-template-rows: 2fr 3fr 3fr;
     grid-template-areas: 
     'sider pro-top pro-top'
-    'sider my-pro .'
-    'sider . .'
+    'sider my-pro my-pro'
+    'sider my-pro my-pro'
+    'sider1 my-pro my-pro'
     'sider1 p-rec p-rec'
     'sider1 cont cont'
     'sider2 cont cont'
@@ -45,7 +46,7 @@ body{
     background: #4444;
     grid-area: sider;
     width: 100%;
-    height: 40vh;
+    /* height: 40vh; */
 }
 
 .profile-top div{
@@ -278,7 +279,7 @@ div .item-loc > a p{
     grid-area: pro-top;
     display: flex;
     justify-content: space-between;
-    height: 8vh;
+    /* height: 8vh; */
 }
 
 .project{
@@ -296,6 +297,10 @@ div .item-loc > a p{
 
 .my-projects{
     grid-area: my-pro;
+    display: flex;
+    flex-wrap: wrap;
+    width: 100%;
+    gap: 20px;
 }
 
 .projects-md{
@@ -303,16 +308,20 @@ div .item-loc > a p{
     display: flex;
     flex-wrap: wrap;
     text-decoration: none;
-    /* padding: 10px; */
+    width: 465px;
+    height: 25vh;
     justify-content: space-between;
+    /* margin: 0px 10px 0px 10px; */
 }
 
 .projects-md p{
+    color: #474747;
     text-align: justify;
     margin: 5px 10px;
 }
 
 .projects-md > div{
+    align-items: center;
     display: flex;
     flex-wrap: wrap;
 }
@@ -338,6 +347,7 @@ div .item-loc > a p{
 
 .icon-item{
     padding: 10px;
+    margin: 0px;
 }
 
 .icon-item i {
@@ -346,6 +356,7 @@ div .item-loc > a p{
 }
 
 .icon-item p{
+    color: #58007a;
     margin: 0px 5px;
 }
 
@@ -356,15 +367,45 @@ div .item-loc > a p{
 }
 
 .tecno p{
+    align-items: center;
+    display: flex;
+    flex-wrap: wrap;
     margin: 0px;
     color: #353535;
 }
 
-.tecno p::before{
-    color: yellow;
+.tecno .tec-p-1::before{
     content: '';
+    background: #00aeff;
+    border: 1px solid black;
     border-radius: 50%;
-    padding: 10px;
+    display: flex;
+    flex-wrap: wrap;
+    width: 10px;
+    height: 10px;
+    margin: 0px 5px;
+}
+.tecno .tec-p-2::before{
+    content: '';
+    background: #ff9900;
+    border: 1px solid black;
+    border-radius: 50%;
+    display: flex;
+    flex-wrap: wrap;
+    width: 10px;
+    height: 10px;
+    margin: 0px 5px;
+}
+.tecno .tec-p-3::before{
+    content: '';
+    background: #eeff00;
+    border: 1px solid black;
+    border-radius: 50%;
+    display: flex;
+    flex-wrap: wrap;
+    width: 10px;
+    height: 10px;
+    margin: 0px 5px;
 }
 
 /* ----------------------------------------------- */
