--- a/desafios/portfolio/css/query-style.css
+++ b/desafios/portfolio/css/query-style.css
@@ -91,9 +91,8 @@
 
     }
 
-    footer{
-        display: flex;
-        width: 100%;
-    }
     
+    footer{
+        min-width: 450px;
+    }
 }
