--- a/desafios/portfolio/css/query-style.css
+++ b/desafios/portfolio/css/query-style.css
@@ -51,6 +51,7 @@
         display: flex;
         grid-area: sider3;
         max-width: 450px;
+        flex-direction: column;
 
     }
 
@@ -58,6 +59,7 @@
         display: flex;
         grid-area: sider4;
         max-width: 450px;
+        flex-direction: column;
 
     }
 
